

2024.11.19

	+	tools/spartitoConstructor.ts: added env config of ORT_SESSION_OPTIONS.


2024.11.18

	+	tools/scoreInit.ts: added env config of ENABLED_VISION_GAUGE.


2024.11.17

	+	Added datetime function of locale string.


2024.11.15

	+	utils.ts: added comma list support for idRange2Filter.


2024.10.9

	+	parseSingleScore.ts: added argv optino of solveSpartito.


2024.9.19

	+	parseSingleScore.ts: added argv of skip_exist.


2024.9.13

	>	tools/lib/solutionStore.ts: merged remote solution store into.

	+	tools/parseSingleScore.ts: enabled glimpseMeasure.


2024.4.25

	+	tools/metaExtractor.ts created.


2024.4.24

	+	parseSingleScore.ts: score recognition & regulation implemented.


2024.4.23

	+	tools/parseSingleScore.ts created.



2023.11.24

	+	browser: vue + vite frontend setup.


2023.11.23

	+	Folder of browser/ created.


2023.11.22

	+	tools/maestroIndexer.ts created.


2023.11.21

	+	midiIndexing.ts: MIDI hash library file added.

	+	tools/midiQuery.ts created.


2023.8.29

	+	compressAudio.py created.


2023.8.28

	+	tools/libs/rvqFormat.py created.

	+	tools/libs/encodec.py created.


2023.8.24

	+	tools/spartitoSolver.ts created.


2023.8.23

	+	spartitoConstructor.ts: tags on spartito appended.


2023.7.25

	+	tools/midiIndexing.ts created.

	+	tools/libs/midiHash.ts created.


2023.7.22

	+	tools/workStat.ts created.


2023.7.19

	+	spartitoConstructor.ts created.

	+	tools/scoreVision.ts created.


2023.7.18

	+	tools/scoreInit.ts created.


2023.7.17

	+	tools/ocr.ts created.


2023.7.14

	+	tools/pageReader.ts created.


2023.7.13

	+	tools/copyMIDI.ts created.

	+	spectrumPlotter.py created.


2023.7.12

	+	pianoTranscriber.py created.


2023.7.11

	+	tools/audioSplitter.ts created.

	+	tools/dataInit.ts created.

	+	prisma test case added.

	|	Project imslp-mining setup.


------------------------------------------------------- imslp-mining ChangeLog -------------------------------------------------------